# sample-security

.github/workflows/: main.yml
service-scheduler/: .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml  setup.sh
service-scheduler/.github/workflows/: dev.yml
service-scheduler/backend/: .env  main.py  migrate-to-uv.sh  pyproject.toml  requirements.txt
service-scheduler/backend/app/: config.py  database.py
service-scheduler/backend/app/api/: auth.py  bookings.py  slots.py
service-scheduler/backend/app/auth/: dependencies.py  security.py
service-scheduler/backend/app/models/: booking.py  slot.py  user.py
service-scheduler/backend/app/schemas/: booking.py  slot.py  user.py
service-scheduler/frontend/: package-lock.json  package.json
service-scheduler/frontend/src/app/: app.component.ts  app.routes.ts
service-scheduler/frontend/src/app/core/guards/: admin.guard.ts  auth.guard.ts
service-scheduler/frontend/src/app/core/interceptors/: auth.interceptor.ts
service-scheduler/frontend/src/app/core/models/: booking.model.ts  index.ts  slot.model.ts  user.model.ts
service-scheduler/frontend/src/app/core/services/: auth.service.ts  booking.service.ts  index.ts  slot.service.ts
service-scheduler/frontend/src/app/features/auth/login/: login.component.html  login.component.scss  login.component.ts
service-scheduler/frontend/src/environments/: environment.prod.ts  environment.ts
service-scheduler/hasura/: init.sql
service-scheduler/hasura/metadata/: databases.yaml
